fix(packages/sui-studio): wrong color name token

--- a/packages/sui-studio/src/styles/_settings.scss
+++ b/packages/sui-studio/src/styles/_settings.scss
@@ -1,7 +1,7 @@
 @use 'sass:math';
 
 // --- Colors --- //
-$c-primary: var(--studio-c-primitive, #09f) !default;
+$c-primary: var(--studio-c-primary, #09f) !default;
 $c-accent: var(--studio-c-accent, #ff3860) !default;
 
 $c-surface: var(--studio-c-surface, #fff) !default;
